Jekyll build, preview pr/347 (on:pull_request)

--- a/pr/347/learn/intrinsics/ASIN.html
+++ b/pr/347/learn/intrinsics/ASIN.html
@@ -44825,7 +44825,7 @@ equal to one; or be <em>complex</em>.</dd>
       <dt><strong>result</strong></dt>
       <dd>The return value is of the same type and kind as <strong>x</strong>. The real part of
 the result is in radians and lies in the range <strong>-PI/2 &lt;=
-asin(X) &lt;= PI/2</strong>.</dd>
+asin(x) &lt;= PI/2</strong>.</dd>
     </dl>
   </li>
 </ul>
