--- a/pr/347/learn/intrinsics/COSH.html
+++ b/pr/347/learn/intrinsics/COSH.html
@@ -44896,14 +44896,14 @@ will be the same type and kind as the input value <strong>x</strong>.</p>
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>cosh</strong>(x) computes the hyperbolic cosine of X.</p>
+<p><strong>cosh</strong>(x) computes the hyperbolic cosine of <strong>x</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>X</strong></dt>
+      <dt><strong>x</strong></dt>
       <dd>The type shall be <em>real</em> or <em>complex</em>.</dd>
     </dl>
   </li>
@@ -44911,9 +44911,9 @@ will be the same type and kind as the input value <strong>x</strong>.</p>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value has same type and kind as X. If X is complex, the
-imaginary part of the result is in radians. If X is <em>real</em>, the return
-value has a lower bound of one, <strong>cosh</strong>(x) &gt;= 1.</p>
+<p>The return value has same type and kind as <strong>x</strong>. If <strong>x</strong> is <em>complex</em>, the
+imaginary part of the result is in radians. If <strong>x</strong> is <em>real</em>, the return
+value has a lower bound of one, <strong>cosh(x) &gt;= 1</strong>.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
