--- a/pr/347/learn/intrinsics/EOSHIFT.html
+++ b/pr/347/learn/intrinsics/EOSHIFT.html
@@ -44922,21 +44922,21 @@
 <h2 id="description"><strong>Description</strong></h2>
 
 <p><strong>eoshift</strong>(array, shift[, boundary, dim]) performs an end-off shift
-on elements of ARRAY along the dimension of DIM. If DIM is omitted it is
-taken to be 1. DIM is a scalar of type <em>integer</em> in the range of 1 &lt;= DIM
-&lt;= n where “n” is the rank of ARRAY. If the rank of ARRAY is one, then
-all elements of ARRAY are shifted by SHIFT places. If rank is greater
-than one, then all complete rank one sections of ARRAY along the given
+on elements of <strong>array</strong> along the dimension of <strong>dim</strong>. If <strong>dim</strong> is omitted it is
+taken to be <strong>1</strong>. <strong>dim</strong> is a scalar of type <em>integer</em> in the range of <strong>1 &lt;= DIM
+&lt;= n</strong> where <strong>“n”</strong> is the rank of <strong>array</strong>. If the rank of <strong>array</strong> is one, then
+all elements of <strong>array</strong> are shifted by <strong>shift</strong> places. If rank is greater
+than one, then all complete rank one sections of <strong>array</strong> along the given
 dimension are shifted. Elements shifted out one end of each rank one
-section are dropped. If BOUNDARY is present then the corresponding value
-of from BOUNDARY is copied back in the other end. If BOUNDARY is not
-present then the following are copied in depending on the type of ARRAY.</p>
+section are dropped. If <strong>boundary</strong> is present then the corresponding value
+of from <strong>boundary</strong> is copied back in the other end. If <strong>boundary</strong> is not
+present then the following are copied in depending on the type of <strong>array</strong>.</p>
 
 <p>*Array Type* - *Boundary Value*</p>
 
 <ul>
   <li>
-    <p>Numeric 0 of the type and kind of ARRAY</p>
+    <p>Numeric 0 of the type and kind of <strong>array</strong></p>
   </li>
   <li>
     <p>Logical .false.</p>
@@ -44951,25 +44951,25 @@ present then the following are copied in depending on the type of ARRAY.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>ARRAY</strong></dt>
+      <dt><strong>array</strong></dt>
       <dd>May be any type, not scalar.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>SHIFT</strong></dt>
+      <dt><strong>shift</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>BOUNDARY</strong></dt>
+      <dt><strong>boundary</strong></dt>
       <dd>Same type as ARRAY.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>DIM</strong></dt>
+      <dt><strong>dim</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
@@ -44977,7 +44977,7 @@ present then the following are copied in depending on the type of ARRAY.</p>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>Returns an array of same type and rank as the ARRAY argument.</p>
+<p>Returns an array of same type and rank as the <strong>array</strong> argument.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
