--- a/pr/347/learn/intrinsics/EPSILON.html
+++ b/pr/347/learn/intrinsics/EPSILON.html
@@ -44923,14 +44923,14 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>epsilon</strong>(x) returns a nearly negligible number relative to 1.</p>
+<p><strong>epsilon</strong>(x) returns a nearly negligible number relative to <strong>1</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>X</strong></dt>
+      <dt><strong>x</strong></dt>
       <dd>The type shall be <em>real</em>.</dd>
     </dl>
   </li>
