--- a/pr/347/learn/intrinsics/EVENT_QUERY.html
+++ b/pr/347/learn/intrinsics/EVENT_QUERY.html
@@ -44927,37 +44927,37 @@
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
 
-<p>call <strong>EVENT_QUERY</strong>(EVENT, COUNT [, STAT])</p>
+<p>call <strong>event_query</strong>(event, count [, stat])</p>
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>EVENT_QUERY assigns the number of events to COUNT which have been
-posted to the EVENT variable and not yet been removed by calling
-EVENT_WAIT. When STAT is present and the invocation was successful, it
-is assigned the value 0. If it is present and the invocation has failed,
-it is assigned a positive value and COUNT is assigned the value <strong>-1</strong>.</p>
+<p><strong>event_query</strong> assigns the number of events to <strong>count</strong> which have been
+posted to the <strong>event</strong> variable and not yet been removed by calling
+<strong>event_wait</strong>. When <strong>stat</strong> is present and the invocation was successful, it
+is assigned the value <strong>0</strong>. If it is present and the invocation has failed,
+it is assigned a positive value and <strong>count</strong> is assigned the value <strong>-1</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>EVENT</strong></dt>
+      <dt><strong>event</strong></dt>
       <dd>(intent(in)) Scalar of type event_type, defined in
 iso_fortran_env; shall not be coindexed.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>COUNT</strong></dt>
+      <dt><strong>count</strong></dt>
       <dd>(intent(out))Scalar integer with at least the precision of default
-integer.</dd>
+<em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>STAT</strong></dt>
-      <dd>(OPTIONAL) Scalar default-kind integer variable.</dd>
+      <dt><strong>stat</strong></dt>
+      <dd>(OPTIONAL) Scalar default-kind <em>integer</em> variable.</dd>
     </dl>
   </li>
 </ul>
