--- a/pr/347/learn/intrinsics/EXP.html
+++ b/pr/347/learn/intrinsics/EXP.html
@@ -44935,14 +44935,14 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>exp</strong>(x) computes the base “e” exponential of X.</p>
+<p><strong>exp</strong>(x) computes the base “e” exponential of <strong>x</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>X</strong></dt>
+      <dt><strong>x</strong></dt>
       <dd>The type shall be <em>real</em> or <em>complex</em>.</dd>
     </dl>
   </li>
@@ -44950,7 +44950,7 @@
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value has same type and kind as X.</p>
+<p>The return value has same type and kind as <strong>x</strong>.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
