--- a/pr/347/learn/intrinsics/FLOAT.html
+++ b/pr/347/learn/intrinsics/FLOAT.html
@@ -44943,14 +44943,14 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>float</strong>(a) converts the integer A to a default real value.</p>
+<p><strong>float</strong>(a) converts the <em>integer</em> <strong>a</strong> to a default real value.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>A</strong></dt>
+      <dt><strong>a</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
