--- a/pr/347/learn/intrinsics/FLOOR.html
+++ b/pr/347/learn/intrinsics/FLOOR.html
@@ -44941,7 +44941,7 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>floor</strong>(a) returns the greatest integer less than or equal to X.</p>
+<p><strong>floor</strong>(a) returns the greatest integer less than or equal to <strong>a</strong>.</p>
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
 
@@ -44952,13 +44952,13 @@
 <ul>
   <li>
     <dl>
-      <dt><strong>A</strong></dt>
+      <dt><strong>a</strong></dt>
       <dd>The type shall be <em>real</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>KIND</strong></dt>
+      <dt><strong>kind</strong></dt>
       <dd>(Optional) An <em>integer</em> initialization expression indicating the kind
 parameter of the result.</dd>
     </dl>
