--- a/pr/347/learn/intrinsics/LGT.html
+++ b/pr/347/learn/intrinsics/LGT.html
@@ -45013,7 +45013,7 @@
 
 <p>Determines whether one string is lexically greater than another string,
 where the two strings are interpreted as containing ASCII character
-codes. If the String A and String B are not the same length, the shorter
+codes. If the String <strong>a</strong> and String <strong>b</strong> are not the same length, the shorter
 is compared as if spaces were appended to it to form a value that has
 the same length as the longer.</p>
 
