--- a/pr/347/learn/intrinsics/MAXVAL.html
+++ b/pr/347/learn/intrinsics/MAXVAL.html
@@ -45040,46 +45040,46 @@
 <h2 id="description"><strong>Description</strong></h2>
 
 <p>Determines the maximum value of the elements in an array value, or, if
-the <strong>DIM</strong> argument is supplied, determines the maximum value along each
-row of the array in the <strong>DIM</strong> direction. If <strong>MASK</strong> is present, only the
-elements for which <strong>MASK</strong> is <strong>.true.</strong> are considered. If the array has zero
-size, or all of the elements of <strong>MASK</strong> are .false., then the result is the
-most negative number of the type and kind of <strong>ARRAY</strong> if <strong>ARRAY</strong> is numeric,
-or a string of nulls if <strong>ARRAY</strong> is of character type.</p>
+the <strong>dim</strong> argument is supplied, determines the maximum value along each
+row of the array in the <strong>dim</strong> direction. If <strong>mask</strong> is present, only the
+elements for which <strong>mask</strong> is <strong>.true.</strong> are considered. If the array has zero
+size, or all of the elements of <strong>mask</strong> are .false., then the result is the
+most negative number of the type and kind of <strong>array</strong> if <strong>array</strong> is numeric,
+or a string of nulls if <strong>array</strong> is of character type.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>ARRAY</strong></dt>
+      <dt><strong>array</strong></dt>
       <dd>Shall be an array of type <em>integer</em>, <em>real</em>, or <strong>character</strong>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>DIM</strong></dt>
+      <dt><strong>dim</strong></dt>
       <dd>(Optional) Shall be a scalar of type <em>integer</em>, with a value between
-one and the rank of <strong>ARRAY</strong>, inclusive. It may not be an optional
+one and the rank of <strong>array</strong>, inclusive. It may not be an optional
 dummy argument.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>MASK</strong></dt>
+      <dt><strong>mask</strong></dt>
       <dd>(Optional) Shall be an array of type <em>logical</em>, and conformable with
-<strong>ARRAY</strong>.</dd>
+<strong>array</strong>.</dd>
     </dl>
   </li>
 </ul>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>If <strong>DIM</strong> is absent, or if <strong>ARRAY</strong> has a rank of one, the result is a scalar.
-If <strong>DIM</strong> is present, the result is an array with a rank one less than the
-rank of <strong>ARRAY</strong>, and a size corresponding to the size of <strong>ARRAY</strong> with the
-<strong>DIM</strong> dimension removed. In all cases, the result is of the same type and
-kind as <strong>ARRAY</strong>.</p>
+<p>If <strong>dim</strong> is absent, or if <strong>array</strong> has a rank of one, the result is a scalar.
+If <strong>dim</strong> is present, the result is an array with a rank one less than the
+rank of <strong>array</strong>, and a size corresponding to the size of <strong>array</strong> with the
+<strong>dim</strong> dimension removed. In all cases, the result is of the same type and
+kind as <strong>array</strong>.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
@@ -45115,11 +45115,8 @@ kind as <strong>ARRAY</strong>.</p>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><a href="MAX"><strong>max</strong>(3)</a>, <a href="MAXLOC"><strong>maxloc</strong>(3)</a></p>
-
-<h2 id="category"><strong>Category</strong></h2>
-
-<p>intrinsics</p>
+<p><a href="MAX"><strong>max</strong>(3)</a>,
+<a href="MAXLOC"><strong>maxloc</strong>(3)</a></p>
 
 
       <div class="container-flex">
