--- a/pr/347/learn/intrinsics/MIN.html
+++ b/pr/347/learn/intrinsics/MIN.html
@@ -45054,14 +45054,14 @@
 <ul>
   <li>
     <dl>
-      <dt><strong>A1</strong></dt>
+      <dt><strong>a1</strong></dt>
       <dd>The type shall be <em>integer</em> or <em>real</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>A2, A3, ```</strong></dt>
-      <dd>An expression of the same type and kind as A1.</dd>
+      <dt><strong>a2, a3, ```</strong></dt>
+      <dd>An expression of the same type and kind as <strong>A1</strong>.</dd>
     </dl>
   </li>
 </ul>
