--- a/pr/347/learn/intrinsics/MINVAL.html
+++ b/pr/347/learn/intrinsics/MINVAL.html
@@ -45051,25 +45051,25 @@ mask])</p>
 <h2 id="description"><strong>Description</strong></h2>
 
 <p>Determines the minimum value of the elements in an array value, or, if
-the DIM argument is supplied, determines the minimum value along each
-row of the array in the DIM direction. If MASK is present, only the
-elements for which MASK is .true. are considered. If the array has zero
+the <strong>dim</strong> argument is supplied, determines the minimum value along each
+row of the array in the <strong>dim</strong> direction. If <strong>mask</strong> is present, only the
+elements for which <strong>mask</strong> is .true. are considered. If the array has zero
 size, or all of the elements of MASK are .false., then the result is
-<strong>huge</strong>(array) if ARRAY is numeric, or a string of <strong>char</strong>(255)
-characters if ARRAY is of character type.</p>
+<strong>huge</strong>(array) if <strong>array</strong> is numeric, or a string of <strong>char</strong>(255)
+characters if <strong>array</strong> is of character type.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>ARRAY</strong></dt>
-      <dd>Shall be an array of type <em>integer</em>, <em>real</em>, or CHARACTER.</dd>
+      <dt><strong>array</strong></dt>
+      <dd>Shall be an array of type <em>integer</em>, <em>real</em>, or <em>character</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>DIM</strong></dt>
+      <dt><strong>dim</strong></dt>
       <dd>(Optional) Shall be a scalar of type <em>integer</em>, with a value between
 one and the rank of ARRAY, inclusive. It may not be an optional
 dummy argument.</dd>
@@ -45077,19 +45077,19 @@ dummy argument.</dd>
   </li>
   <li>
     <dl>
-      <dt><strong>MASK</strong></dt>
-      <dd>Shall be an array of type <em>logical</em>, and conformable with ARRAY.</dd>
+      <dt><strong>mask</strong></dt>
+      <dd>Shall be an array of type <em>logical</em>, and conformable with <strong>array</strong>.</dd>
     </dl>
   </li>
 </ul>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>If DIM is absent, or if ARRAY has a rank of one, the result is a scalar.
-If DIM is present, the result is an array with a rank one less than the
-rank of ARRAY, and a size corresponding to the size of ARRAY with the
-DIM dimension removed. In all cases, the result is of the same type and
-kind as ARRAY.</p>
+<p>If <strong>dim</strong> is absent, or if <strong>array</strong> has a rank of one, the result is a scalar.
+If <strong>dim</strong> is present, the result is an array with a rank one less than the
+rank of <strong>array</strong>, and a size corresponding to the size of <strong>array</strong> with the
+<strong>dim</strong> dimension removed. In all cases, the result is of the same type and
+kind as <strong>array</strong>.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
