--- a/pr/347/learn/intrinsics/MOD.html
+++ b/pr/347/learn/intrinsics/MOD.html
@@ -45051,21 +45051,21 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>mod</strong>(a,p) computes the remainder of the division of A by P.</p>
+<p><strong>mod</strong>(a,p) computes the remainder of the division of <strong>a</strong> by <strong>p</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>A</strong></dt>
+      <dt><strong>a</strong></dt>
       <dd>Shall be a scalar of type <em>integer</em> or <em>real</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>P</strong></dt>
-      <dd>Shall be a scalar of the same type and kind as A and not equal to
+      <dt><strong>p</strong></dt>
+      <dd>Shall be a scalar of the same type and kind as <strong>a</strong> and not equal to
 zero.</dd>
     </dl>
   </li>
@@ -45073,10 +45073,10 @@ zero.</dd>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is the result of a - (int(a/p) * p). The type and kind
+<p>The return value is the result of <strong>a - (int(a/p) * p)</strong>. The type and kind
 of the return value is the same as that of the arguments. The returned
 value has the same sign as A and a magnitude less than the magnitude of
-P.</p>
+<strong>p</strong>.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
