--- a/pr/347/learn/intrinsics/NUMERIC_index.html
+++ b/pr/347/learn/intrinsics/NUMERIC_index.html
@@ -645,7 +645,7 @@
         
       </div>
 
-      <h3 id="manipulation-and-propeties-of-numeric-values">Manipulation and propeties of numeric values</h3>
+      <h3 id="manipulation-and-properties-of-numeric-values">Manipulation and properties of numeric values</h3>
 
 <table>
   <thead>
