--- a/pr/347/learn/intrinsics/SCALE.html
+++ b/pr/347/learn/intrinsics/SCALE.html
@@ -45107,20 +45107,20 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>scale</strong>(x,i) returns x * <strong>radix</strong>(x)**i.</p>
+<p><strong>scale(x,i)</strong> returns x * <strong>radix(x)**i</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>X</strong></dt>
+      <dt><strong>x</strong></dt>
       <dd>The type of the argument shall be a <em>real</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>I</strong></dt>
+      <dt><strong>i</strong></dt>
       <dd>The type of the argument shall be a <em>integer</em>.</dd>
     </dl>
   </li>
@@ -45128,8 +45128,8 @@
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of the same type and kind as X. Its value is x *
-<strong>radix</strong>(x)**i.</p>
+<p>The return value is of the same type and kind as <strong>x</strong>. Its value is <strong>x *
+radix(x)**i</strong>.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
