--- a/pr/347/learn/intrinsics/TAN.html
+++ b/pr/347/learn/intrinsics/TAN.html
@@ -45147,18 +45147,18 @@
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
 
-<p>result = <strong>tan</strong>(x)</p>
+<p>result = <strong>tan(x)</strong></p>
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>tan</strong>(x) computes the tangent of X.</p>
+<p><strong>tan(x)</strong> computes the tangent of <strong>x</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>X</strong></dt>
+      <dt><strong>x</strong></dt>
       <dd>The type shall be <em>real</em> or <em>complex</em>.</dd>
     </dl>
   </li>
@@ -45166,7 +45166,7 @@
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value has the same type and kind as X.</p>
+<p>The return value has the same type and kind as <strong>x</strong>.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
