--- a/pr/347/learn/intrinsics/EXPONENT.html
+++ b/pr/347/learn/intrinsics/EXPONENT.html
@@ -44937,7 +44937,7 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>exponent</strong>(x) returns the value of the exponent part of X. If X is
+<p><strong>exponent</strong>(x) returns the value of the exponent part of <strong>x</strong>. If <strong>x</strong> is
 zero the value returned is zero.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
@@ -44945,7 +44945,7 @@ zero the value returned is zero.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>X</strong></dt>
+      <dt><strong>x</strong></dt>
       <dd>The type shall be <em>real</em>.</dd>
     </dl>
   </li>
