--- a/pr/347/learn/intrinsics/MINLOC.html
+++ b/pr/347/learn/intrinsics/MINLOC.html
@@ -45047,14 +45047,14 @@
 <h2 id="description"><strong>Description</strong></h2>
 
 <p>Determines the location of the element in the array with the minimum
-value, or, if the <strong>DIM</strong> argument is supplied, determines the locations of
-the minimum element along each row of the array in the <strong>DIM</strong> direction. If
-<strong>MASK</strong> is present, only the elements for which <strong>MASK</strong> is <strong>.true.</strong> are
+value, or, if the <strong>dim</strong> argument is supplied, determines the locations of
+the minimum element along each row of the array in the <strong>dim</strong> direction. If
+<strong>mask</strong> is present, only the elements for which <strong>mask</strong> is <strong>.true.</strong> are
 considered. If more than one element in the array has the minimum value,
 the location returned is that of the first such element in array element
-order. If the array has zero size, or all of the elements of <strong>MASK</strong> are
-.false., then the result is an array of zeroes. Similarly, if <strong>DIM</strong> is
-supplied and all of the elements of <strong>MASK</strong> along a given row are zero, the
+order. If the array has zero size, or all of the elements of <strong>mask</strong> are
+.false., then the result is an array of zeroes. Similarly, if <strong>dim</strong> is
+supplied and all of the elements of <strong>mask</strong> along a given row are zero, the
 result value for that row is zero.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
@@ -45062,32 +45062,32 @@ result value for that row is zero.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>ARRAY</strong></dt>
+      <dt><strong>array</strong></dt>
       <dd>Shall be an array of type <em>integer</em>, <em>real</em>, or <em>character</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>DIM</strong></dt>
+      <dt><strong>dim</strong></dt>
       <dd>(Optional) Shall be a scalar of type <em>integer</em>, with a value between
-one and the rank of <strong>ARRAY</strong>, inclusive. It may not be an optional
+one and the rank of <strong>array</strong>, inclusive. It may not be an optional
 dummy argument.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>MASK</strong></dt>
-      <dd>Shall be an array of type <em>logical</em>, and conformable with <strong>ARRAY</strong>.</dd>
+      <dt><strong>mask</strong></dt>
+      <dd>Shall be an array of type <em>logical</em>, and conformable with <strong>array</strong>.</dd>
     </dl>
   </li>
 </ul>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>If <strong>DIM</strong> is absent, the result is a rank-one array with a length equal to
-the rank of <strong>ARRAY</strong>. If <strong>DIM</strong> is present, the result is an array with a rank
-one less than the rank of <strong>ARRAY</strong>, and a size corresponding to the size of
-<strong>ARRAY</strong> with the <strong>DIM</strong> dimension removed. If <strong>DIM</strong> is present and <strong>ARRAY</strong> has a
+<p>If <strong>dim</strong> is absent, the result is a rank-one array with a length equal to
+the rank of <strong>array</strong>. If <strong>dim</strong> is present, the result is an array with a rank
+one less than the rank of <strong>array</strong>, and a size corresponding to the size of
+<strong>array</strong> with the <strong>dim</strong> dimension removed. If <strong>dim</strong> is present and <strong>array</strong> has a
 rank of one, the result is a scalar. In all cases, the result is of
 default <em>integer</em> type.</p>
 
@@ -45133,8 +45133,8 @@ default <em>integer</em> type.</p>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><a href="MIN"><strong>min</strong>(3)</a>](MIN),
-<a href="MINVAL"><strong>minval</strong>(3)</a>](MINVAL)</p>
+<p><a href="MIN"><strong>min</strong>(3)</a>,
+<a href="MINVAL"><strong>minval</strong>(3)</a></p>
 
 
       <div class="container-flex">
