--- a/pr/347/learn/intrinsics/SPACING.html
+++ b/pr/347/learn/intrinsics/SPACING.html
@@ -45137,7 +45137,7 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>Determines the distance between the argument X and the nearest adjacent
+<p>Determines the distance between the argument <strong>x</strong> and the nearest adjacent
 number of the same type.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
@@ -45145,7 +45145,7 @@ number of the same type.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>X</strong></dt>
+      <dt><strong>x</strong></dt>
       <dd>Shall be of type <em>real</em>.</dd>
     </dl>
   </li>
@@ -45153,7 +45153,7 @@ number of the same type.</p>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The result is of the same type as the input argument X.</p>
+<p>The result is of the same type as the input argument <strong>x</strong>.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
